--- a/Resources/FCCResources.xaml
+++ b/Resources/FCCResources.xaml
@@ -91,7 +91,11 @@
             <Border x:Name="maBd"  Grid.Column="1"
                     Background="{DynamicResource NodeBgBrush}" BorderBrush="{DynamicResource ThemeBrush}" 
                     BorderThickness="1" CornerRadius="4">
-                <TextBox x:Name="answerTxt" Margin="2,2,8,2" Background="Transparent"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox x:Name="hintTxt" Margin="2,2,0,2" ToolTip="{x:Null}" MinWidth="6"
+                             Template="{StaticResource operationTextBoxTemplate}"/>
+                    <TextBox x:Name="answerTxt" Margin="0,2,8,2" Background="Transparent"/>
+                </StackPanel>
             </Border>
         </Grid>
         <ControlTemplate.Triggers>
