--- a/View/TextTab/TabEndItem.xaml
+++ b/View/TextTab/TabEndItem.xaml
@@ -9,9 +9,10 @@
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="Auto" SharedSizeGroup="NextName"/>
             <ColumnDefinition Width="40"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Border Grid.ColumnSpan="5" Background="{DynamicResource BaseBrush}"
+        <Border Grid.ColumnSpan="6" Background="{DynamicResource BaseBrush}"
                 BorderThickness="0,1,0,1" BorderBrush="{DynamicResource ThemeBrush}"/>
         <TextBlock x:Name="answerTxt" Grid.Column="0" Margin="4,2,4,2"
                    Foreground="{DynamicResource Foreground.BaseBrush}"
@@ -25,5 +26,7 @@
                 ToolTip="{Binding [Tab_ToNode], Source={x:Static r:LanguageManager.Instance}}"
                 Click="NextBtn_Click" Template="{DynamicResource generalButtonTemplate}"
                 Content="M0,0 0,8 6,4Z"/>
-    </Grid>
+        <TextBlock x:Name="hintTxt" Grid.Column="4" Margin="4,2,4,2"
+                   Foreground="{DynamicResource Foreground.BaseBrush}"
+                   HorizontalAlignment="Left" VerticalAlignment="Center"/>    </Grid>
 </UserControl>
