--- a/Resources/WindowResources.xaml
+++ b/Resources/WindowResources.xaml
@@ -544,7 +544,8 @@
             <!--下方部分-->
             <Grid Background="{DynamicResource BaseBrush}" Margin="2,0,2,2" Grid.Row="2">
                 <StackPanel Orientation="Horizontal" Margin="8,0,0,0">
-                    <TextBlock Text="导出路径" TextAlignment="Center" VerticalAlignment="Center"
+                    <TextBlock Text="{Binding [Out_Path], Source={x:Static r:LanguageManager.Instance}}"
+                               TextAlignment="Center" VerticalAlignment="Center"
                                Foreground="{DynamicResource Foreground.BaseBrush}"/>
                     <Border MinWidth="200" Margin="8,2,4,2" BorderThickness="0,0,0,2"
                             BorderBrush="{DynamicResource Text.Foreground.BaseBrush}">
@@ -554,13 +555,15 @@
                             RelativeSource={RelativeSource AncestorType={x:Type v:OutputWindowBase}}}"/>
                     </Border>
                     <Border Background="{DynamicResource ThemeBrush}">
-                        <Button x:Name="BrowseButton" Content="浏览"
+                        <Button x:Name="BrowseButton" 
+                                Content="{Binding [Out_Browser], Source={x:Static r:LanguageManager.Instance}}"
                                 Template="{StaticResource textButtonTemplate}"/>
                     </Border>
                 </StackPanel>
                 <Border Background="{DynamicResource ThemeBrush}" Margin="0,0,8,0"
                         HorizontalAlignment="Right">
-                    <Button x:Name="OutputButton" Content="导出" 
+                    <Button x:Name="OutputButton" 
+                            Content="{Binding [Out_Output], Source={x:Static r:LanguageManager.Instance}}" 
                             Template="{StaticResource textButtonTemplate}"/>
                 </Border>
             </Grid>
