--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -239,15 +239,13 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RepeatButton}">
-                    <Border Background="{DynamicResource ThemeBrush}">
-                        <Border x:Name="Border" Margin="1" Background="Transparent">
-                            <Path Fill="{DynamicResource Foreground.ThemeBrush}"
-                                  HorizontalAlignment="Center"
-                                  VerticalAlignment="Center"
-                                  Data="{Binding Content, 
-                                RelativeSource={RelativeSource TemplatedParent}}" >
+                    <Border x:Name="Border" BorderThickness="1" Background="Transparent">
+                        <Path Fill="{DynamicResource ThemeBrush}"
+                              HorizontalAlignment="Center"
+                              VerticalAlignment="Center"
+                              Data="{Binding Content, 
+                            RelativeSource={RelativeSource TemplatedParent}}" >
                             </Path>
-                        </Border>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -281,7 +279,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
-                    <Border Background="{DynamicResource ThemeBrush}">
+                    <Border Margin="2" Background="{DynamicResource ThemeBrush}">
                         <Rectangle x:Name="thumbBd" Margin="1" Fill="Transparent" Opacity="0.6"/>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -300,14 +298,14 @@
     <ControlTemplate x:Key="VerticalScrollBar" TargetType="{x:Type ScrollBar}">
         <Grid Background="{StaticResource MiddleBrush}">
             <Grid.RowDefinitions>
-                <RowDefinition Height="12" />
+                <RowDefinition Height="14" />
                 <RowDefinition Height="*" />
-                <RowDefinition Height="12" />
+                <RowDefinition Height="14" />
             </Grid.RowDefinitions>
             <RepeatButton Grid.Row="0"
                           Style="{DynamicResource ScrollBarLineButton}"
                           Command="ScrollBar.LineUpCommand"
-                          Content="M 0 4 L 8 4 L 4 0 Z" />
+                          Content="M 0 5 L 10 5 L 5 0 Z" />
             <Track x:Name="PART_Track"
                    Grid.Row="1"
                    IsDirectionReversed="True">
@@ -326,21 +324,21 @@
             <RepeatButton Grid.Row="2"
                           Style="{DynamicResource ScrollBarLineButton}"
                           Command="ScrollBar.LineDownCommand"
-                          Content="M 0 0 L 4 4 L 8 0 Z" />
+                          Content="M 0 0 L 5 5 L 10 0 Z" />
         </Grid>
     </ControlTemplate>
 
     <ControlTemplate x:Key="HorizontalScrollBar" TargetType="{x:Type ScrollBar}">
         <Grid Background="{StaticResource MiddleBrush}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="12" />
+                <ColumnDefinition Width="14" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="12" />
+                <ColumnDefinition Width="14" />
             </Grid.ColumnDefinitions>
             <RepeatButton Grid.Column="0"
                           Style="{DynamicResource ScrollBarLineButton}"
                           Command="ScrollBar.LineLeftCommand"
-                          Content="M 4 0 L 4 8 L 0 4 Z" />
+                          Content="M 5 0 L 5 10 L 0 5 Z" />
             <Track x:Name="PART_Track"
                    Grid.Column="1"
                    IsDirectionReversed="False">
@@ -359,7 +357,7 @@
             <RepeatButton Grid.Column="2"
                           Style="{DynamicResource ScrollBarLineButton}"
                           Command="ScrollBar.LineRightCommand"
-                          Content="M 0 0 L 4 4 L 0 8 Z" />
+                          Content="M 0 0 L 5 5 L 0 10 Z" />
         </Grid>
     </ControlTemplate>
 
@@ -369,11 +367,11 @@
         <Style.Triggers>
             <Trigger Property="Orientation" Value="Horizontal">
                 <Setter Property="Width" Value="Auto" />
-                <Setter Property="Height" Value="12" />
+                <Setter Property="Height" Value="14" />
                 <Setter Property="Template" Value="{DynamicResource HorizontalScrollBar}" />
             </Trigger>
             <Trigger Property="Orientation" Value="Vertical">
-                <Setter Property="Width" Value="12" />
+                <Setter Property="Width" Value="14" />
                 <Setter Property="Height" Value="Auto" />
                 <Setter Property="Template" Value="{DynamicResource VerticalScrollBar}" />
             </Trigger>
@@ -403,12 +401,11 @@
                                    Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"/>
                         <ScrollBar x:Name="PART_HorizontalScrollBar"
                                    Orientation="Horizontal"
-                                   Grid.Row="1"
+                                   Grid.Row="1" Grid.ColumnSpan="2"
                                    Value="{TemplateBinding HorizontalOffset}"
                                    Maximum="{TemplateBinding ScrollableWidth}"
                                    ViewportSize="{TemplateBinding ViewportWidth}"
                                    Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"/>
-                        <Rectangle Grid.Column="1" Grid.Row="1" Fill="{DynamicResource ThemeBrush}"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -438,12 +435,11 @@
                                    Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"/>
                         <ScrollBar x:Name="PART_HorizontalScrollBar"
                                    Orientation="Horizontal"
-                                   Grid.Row="1"
+                                   Grid.Row="1" Grid.ColumnSpan="2"
                                    Value="{TemplateBinding HorizontalOffset}"
                                    Maximum="{TemplateBinding ScrollableWidth}"
                                    ViewportSize="{TemplateBinding ViewportWidth}"
                                    Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"/>
-                        <Rectangle Grid.Column="1" Grid.Row="1" Fill="{DynamicResource ThemeBrush}"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
