--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -949,4 +949,31 @@
         <Setter Property="Foreground" Value="{DynamicResource Text.Foreground.BaseBrush}"/>
         <Setter Property="CaretBrush" Value="{DynamicResource ThemeBrush}"/>
     </Style>
+
+    <!--拖入用效果显示控件-->
+    <Style TargetType="{x:Type v:InnerGlowGrid}">
+        <Setter Property="Opacity" Value="0"/>
+        <Style.Triggers>
+            <Trigger Property="Tag" Value="d">
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Duration="0:0:0.3"
+                                             To="0.6"
+                                             Storyboard.TargetProperty="Opacity"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+                <Trigger.ExitActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Duration="0:0:0.3"
+                                             To="0"
+                                             Storyboard.TargetProperty="Opacity"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.ExitActions>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
